modified abt-image diamension for fixing the overlap issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,8 +194,8 @@ h2 {
 }
 
 #abt-img {
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 300px;
     box-shadow: 5px 5px 2px rgb(246, 231, 220);
 }
 
@@ -350,6 +350,11 @@ footer {
 
     #cat-section {
         height: 1800px;
+    }
+
+    #abt-img {
+        width: 250px;
+        height: 250px;
     }
 
     #cat-tech {
